Reverted API to original system, built backup support, and added new exception handling

--- a/src/main/resources/Payload/ViewControllerMethods.properties
+++ b/src/main/resources/Payload/ViewControllerMethods.properties
@@ -3,3 +3,4 @@ AvatarY=updateAvatarY
 AvatarRotation=updateAvatarRotation
 AvatarPosition=updateAvatarPosition
 AvatarPenColor=updateAvatarPenColor
+AvatarIsPenDown=updateAvatarIsPenDown
