--- a/src/main/resources/Payload/Exceptions.properties
+++ b/src/main/resources/Payload/Exceptions.properties
@@ -1,1 +1,2 @@
 UnknownCommandCodeError=Unable to translate command code to command in ViewPayload due to unknown command code.
+InvalidParametersError=Command received either a null pointer or empty collection of parameters
