Refactored Model to distribute responsibilities

--- a/src/main/resources/Payload/ViewCommandDescriptions.properties
+++ b/src/main/resources/Payload/ViewCommandDescriptions.properties
@@ -1,12 +1,12 @@
-slogo.Payload.ViewPayloadManager.ViewCommands.UpdateAvatarIsPenDown=Update Avatar Is Pen Down For Avatar ID:
-slogo.Payload.ViewPayloadManager.ViewCommands.UpdateAvatarPenColor=Update Avatar Pen Color For Avatar ID:
-slogo.Payload.ViewPayloadManager.ViewCommands.UpdateAvatarPosition=Update Avatar Position For Avatar ID:
-slogo.Payload.ViewPayloadManager.ViewCommands.UpdateAvatarRotation=Update Avatar Rotation For Avatar ID:
-slogo.Payload.ViewPayloadManager.ViewCommands.UpdateAvatarVisible=Update Avatar Visibility For Avatar ID:
-slogo.Payload.ViewPayloadManager.ViewCommands.UpdateAvatarX=Update Avatar X For Avatar ID:
-slogo.Payload.ViewPayloadManager.ViewCommands.UpdateAvatarY=Update Avatar Y For Avatar ID:
+slogo.Payload.ViewPayloadManager.ViewCommands.UpdateAvatarIsPenDown=Update Avatar Is Pen Down For Avatar ID 
+slogo.Payload.ViewPayloadManager.ViewCommands.UpdateAvatarPenColor=Update Avatar Pen Color For Avatar ID 
+slogo.Payload.ViewPayloadManager.ViewCommands.UpdateAvatarPosition=Update Avatar Position For Avatar ID 
+slogo.Payload.ViewPayloadManager.ViewCommands.UpdateAvatarRotation=Update Avatar Rotation For Avatar ID 
+slogo.Payload.ViewPayloadManager.ViewCommands.UpdateAvatarVisible=Update Avatar Visibility For Avatar ID 
+slogo.Payload.ViewPayloadManager.ViewCommands.UpdateAvatarX=Update Avatar X For Avatar ID 
+slogo.Payload.ViewPayloadManager.ViewCommands.UpdateAvatarY=Update Avatar Y For Avatar ID 
 slogo.Payload.ViewPayloadManager.ViewCommands.UpdateClearScreen=Clear Screen
-slogo.Payload.ViewPayloadManager.ViewCommands.UpdateCreateAvatar=Create New Avatar with Avatar ID:
+slogo.Payload.ViewPayloadManager.ViewCommands.UpdateCreateAvatar=Create New Avatar with Avatar ID 
 slogo.Payload.ViewPayloadManager.ViewCommands.UpdateHistory=Update Displayed History
 slogo.Payload.ViewPayloadManager.ViewCommands.UpdateReturnValues=Update Displayed Return Values
 slogo.Payload.ViewPayloadManager.ViewCommands.UpdateUserLibrary=Update User Library
